--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="productDetails"></div>
         </div>
     </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.0/lazysizes.min.js" async=""></script>
  <script id="script-link" src="script.js"></script>
 </body>
 </html>
