--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <h1>Loja Online</h1>
-       <div id="loading" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); color: white; text-align: center; padding-top: 20%; z-index: 9999;">
+       <div id="loading" class="loading">Loading...</div>
     Carregando...
 </div>
         <div id="categoryNav" class="category-nav"></div>
