--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="top-nav">
             <div class="nav-content">
-                <a href="https://site-oficial-xi.vercel.app/" class="home-button">
+                <a href="https://www.donutstia.com.br" class="home-button">
                     <i class="fas fa-home"></i> Home
                 </a>
                 <div class="cart-icon" onclick="openCartModal()"> 🛒 <span id="cartCount">0</span> </div>
